Estructura del menu

--- a/lib/assets/template.styl
+++ b/lib/assets/template.styl
@@ -1,1 +1,60 @@
+// Google Font
+@import url("https://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,600,700")
+
+// Font color
 upCafe = #5C0B10
+font = #333
+
+
+// Icomoon
+@font-face
+  font-family: 'icomoon'
+  src: url('../fonts/icomoon.eot?ffvnga')
+  src: url('../fonts/icomoon.eot?ffvnga#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?ffvnga') format('truetype'),
+        url('../fonts/icomoon.woff?ffvnga') format('woff'),
+        url('../fonts/icomoon.svg?ffvnga#icomoon') format('svg')
+  font-weight: normal
+  font-style: normal
+
+[class^="icon-"],
+[class*=" icon-"]
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important
+  speak: none
+  font-style: normal
+  font-weight: normal
+  font-variant: normal
+  text-transform: none
+  line-height: 1
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
+
+.icon-plus:before
+  content "\e900"
+
+.icon-minus:before
+  content "\e901"
+
+.icon-home:before
+  content "\e902"
+
+.icon-user:before
+  content "\e903"
+
+.icon-location-arrow:before
+  content "\e904"
+
+.icon-phone:before
+  content "\e905"
+
+.icon-at:before
+  content "\e906"
+
+.icon-shopping-cart:before
+  content "\e907"
+
+.icon-user2:before
+  content "\e908"
+
