--- a/lib/index.jade
+++ b/lib/index.jade
@@ -46,5 +46,6 @@ html(lang="es")
 		//- script(src="./public/js/analytics.js")
 body
 	include ./header/template.jade
+	include ./menu/template.jade
 	script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
 	script(src="../public/js/script.js")
