Estructura del slider con ResponsiveSlides.js

--- a/lib/menu/template.jade
+++ b/lib/menu/template.jade
@@ -1,7 +1,7 @@
 nav(class="Menu")
 	ul(class="Menu-list", id="menu")
 		li(class="Menu-item")
-			a(href="http://codepen.io/adahei/pen/jiGEc", class="Menu-link") productos
+			a(href="#", class="Menu-link") productos
 		li(class="Menu-item")
 			a(href="#", class="Menu-link") servicios
 		li(class="Menu-item")
