--- a/lib/index.jade
+++ b/lib/index.jade
@@ -20,9 +20,9 @@ html(lang="es")
 		meta(name="viewport", content="width=device-width, minimum-scale=1, maximum-scale=1")
 		meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
 		//- CSS
-		link(rel="stylesheet", type="text/css" href="./public/css/normalize.css")
-		link(rel="stylesheet", type="text/css" href="./public/css/animate.css")
-		link(rel="stylesheet", type="text/css" href="./public/css/style.css")
+		link(rel="stylesheet", type="text/css" href="../public/css/normalize.css")
+		link(rel="stylesheet", type="text/css" href="../public/css/animate.css")
+		link(rel="stylesheet", type="text/css" href="../public/css/style.css")
 		//- og tags Facebook
 		meta(property="fb:admins" content="251362261684148")
 		meta(property="og:description" content="Somos una empresa 100% mexicana dedicada a la producción y comercialización de café en grano a nivel nacional.")
@@ -47,5 +47,7 @@ html(lang="es")
 body
 	include ./header/template.jade
 	include ./menu/template.jade
+	include ./slider/template.jade
 	script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
 	script(src="../public/js/script.js")
+	script(src="../public/js/responsiveslides.min.js")
