Se elimina responsiveSlides y se crea slider propio.

--- a/lib/header/template.jade
+++ b/lib/header/template.jade
@@ -1,7 +1,7 @@
 header(class="Header")
 	div(class="Header-container")
 		figure(class="Header-figure")
-			img(class="Header-logo", src="../public/images/logos/Upcafe.png", alt="Upcafe MX")
+			img(class="Header-logo", src="./public/images/logos/Upcafe.png", alt="Upcafe MX")
 		div(class="Header-contact")
 			a(class="Header-span Header-phone", href="tel:5553471644") Tel: 5347-1644
 			span(class="Header-span") /
