--- a/lib/style.styl
+++ b/lib/style.styl
@@ -2,4 +2,4 @@
 @import "assets/template.styl"
 @import "header/template.styl"
 @import "menu/template.styl"
-@import "slider/template.styl"
+@import "gallery/template.styl"
