--- a/lib/index.jade
+++ b/lib/index.jade
@@ -7,11 +7,11 @@ html(lang="es")
 		meta(name="description" content="")
 		meta(name="author" content="Up Cafe")
 		//- Favicons
-		link(rel='icon', sizes='16x16 32x32 48x48 64x64', href='../public/images/logos/favicon.ico')
-		link(rel="apple-touch-icon-precomposed", sizes="144x144", href="../public/images/apple/iPadRetina.png")
-		link(rel="apple-touch-icon-precomposed", sizes="114x114", href="../public/images/apple/iPhoneRetina.png")
-		link(rel="apple-touch-icon-precomposed", sizes="72x72", href="../public/images/apple/iPad.png")
-		link(rel="apple-touch-icon-precomposed", sizes="57x57", href="../public/images/apple/iPhone.png")
+		link(rel='icon', sizes='16x16 32x32 48x48 64x64', href='./public/images/logos/favicon.ico')
+		link(rel="apple-touch-icon-precomposed", sizes="144x144", href="./public/images/apple/iPadRetina.png")
+		link(rel="apple-touch-icon-precomposed", sizes="114x114", href="./public/images/apple/iPhoneRetina.png")
+		link(rel="apple-touch-icon-precomposed", sizes="72x72", href="./public/images/apple/iPad.png")
+		link(rel="apple-touch-icon-precomposed", sizes="57x57", href="./public/images/apple/iPhone.png")
 		//- Humans
 		link(type="text/plain" rel="author" href="http://www.upcafe.mx/public/docs/humans.txt")
 		meta(name="Copyright" content="http://www.upcafe.mx/")
@@ -20,16 +20,16 @@ html(lang="es")
 		meta(name="viewport", content="width=device-width, minimum-scale=1, maximum-scale=1")
 		meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
 		//- CSS
-		link(rel="stylesheet", type="text/css" href="../public/css/normalize.css")
-		link(rel="stylesheet", type="text/css" href="../public/css/animate.css")
-		link(rel="stylesheet", type="text/css" href="../public/css/style.css")
+		link(rel="stylesheet", type="text/css" href="./public/css/normalize.css")
+		link(rel="stylesheet", type="text/css" href="./public/css/animate.css")
+		link(rel="stylesheet", type="text/css" href="./public/css/style.css")
 		//- og tags Facebook
 		meta(property="fb:admins" content="251362261684148")
 		meta(property="og:description" content="Somos una empresa 100% mexicana dedicada a la producción y comercialización de café en grano a nivel nacional.")
 		meta(property="og:title" content="Upcafe MX")
 		meta(property="og:type" content="website")
 		meta(property="og:url" content="http://www.upcafe.mx/")
-		meta(property="og:image" content="../public/images/proyecto/GoldenBeanMX.jpg")
+		meta(property="og:image" content="./public/images/proyecto/GoldenBeanMX.jpg")
 		meta(property="og:site_name" content="upcafe.mx")
 		//- og tags Google+
 		meta(itemprop="description" content="Somos una empresa 100% mexicana dedicada a la producción y comercialización de café en grano a nivel nacional.")
@@ -40,14 +40,14 @@ html(lang="es")
 		meta(name="twitter:title" content="Upcafe MX")
 		meta(name="twitter:description" content="Somos una empresa 100% mexicana dedicada a la producción y comercialización de café en grano a nivel nacional.")
 		meta(name="twitter:creator" content="@GoldenBeanMX")
-		meta(name="twitter:image:src" content="../public/images/proyecto/GoldenBeanMX.jpg")
+		meta(name="twitter:image:src" content="./public/images/proyecto/GoldenBeanMX.jpg")
 		meta(name="twitter:domain" content="upcafe.mx")
 		//- Analytics
 		//- script(src="./public/js/analytics.js")
 body
 	include ./header/template.jade
 	include ./menu/template.jade
-	include ./slider/template.jade
+	include ./gallery/template.jade
 	script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
-	script(src="../public/js/script.js")
-	script(src="../public/js/responsiveslides.min.js")
+	script(src="./public/js/script.js")
+	//- script(src="../upCafe/public/js/script.js")
